SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin/macrocirculation_unittests/)

add_library(Macrocirculation_Test_Runner run_tests.cpp)
target_link_libraries(Macrocirculation_Test_Runner PUBLIC Catch2::Catch2)
target_link_libraries(Macrocirculation_Test_Runner PUBLIC MPI::MPI_CXX)

add_library(Macrocirculation_LibMesh_Test_Runner run_libmesh_tests.cpp)
target_link_libraries(Macrocirculation_LibMesh_Test_Runner PUBLIC Catch2::Catch2)
target_link_libraries(Macrocirculation_LibMesh_Test_Runner PUBLIC LibMacrocirculation)

add_library(Macrocirculation_TestUtil ${CMAKE_CURRENT_SOURCE_DIR}/util/create_3_vessel_network.cpp)
target_sources(Macrocirculation_TestUtil PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/util/create_3_vessel_network.hpp)
target_include_directories(Macrocirculation_TestUtil INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/util)
target_link_libraries(Macrocirculation_TestUtil PUBLIC Catch2::Catch2)
target_link_libraries(Macrocirculation_TestUtil PUBLIC LibMacrocirculation)

add_executable(Macrocirculation_Test_BufferSystem test_buffer_system.cpp)
target_link_libraries(Macrocirculation_Test_BufferSystem PRIVATE LibMacrocirculation)
target_link_libraries(Macrocirculation_Test_BufferSystem PRIVATE Macrocirculation_Test_Runner)
add_test(NAME Macrocirculation_Test_BufferSystem_4 COMMAND mpirun -np 4 ${EXECUTABLE_OUTPUT_PATH}/Macrocirculation_Test_BufferSystem)

add_executable(Macrocirculation_Test_SendAndReceiveBuffers test_send_and_receive_buffers.cpp)
target_link_libraries(Macrocirculation_Test_SendAndReceiveBuffers PRIVATE LibMacrocirculation)
target_link_libraries(Macrocirculation_Test_SendAndReceiveBuffers PRIVATE Macrocirculation_Test_Runner)
add_test(Macrocirculation_Test_SendAndReceiveBuffers ${EXECUTABLE_OUTPUT_PATH}/Macrocirculation_Test_SendAndReceiveBuffers)

add_executable(Macrocirculation_Test_SimpleBifurcation test_bifurcation_flows.cpp)
target_link_libraries(Macrocirculation_Test_SimpleBifurcation PRIVATE LibMacrocirculation)
target_link_libraries(Macrocirculation_Test_SimpleBifurcation PRIVATE Macrocirculation_Test_Runner)
add_test(Macrocirculation_Test_SimpleBifurcation ${EXECUTABLE_OUTPUT_PATH}/Macrocirculation_Test_SimpleBifurcation)

add_executable(Macrocirculation_Test_BoundaryEvaluator test_boundary_evaluator.cpp)
target_link_libraries(Macrocirculation_Test_BoundaryEvaluator PRIVATE LibMacrocirculation)
target_link_libraries(Macrocirculation_Test_BoundaryEvaluator PRIVATE Macrocirculation_LibMesh_Test_Runner)
add_test(NAME Macrocirculation_Test_BoundaryEvaluator COMMAND mpirun -np 2 ${EXECUTABLE_OUTPUT_PATH}/Macrocirculation_Test_BoundaryEvaluator)

add_executable(Macrocirculation_Test_LinearCharacteristicBCs test_linear_characteristic_bcs.cpp)
target_link_libraries(Macrocirculation_Test_LinearCharacteristicBCs PRIVATE LibMacrocirculation)
target_link_libraries(Macrocirculation_Test_LinearCharacteristicBCs PRIVATE Macrocirculation_LibMesh_Test_Runner)
add_test(Macrocirculation_Test_LinearCharacteristicBCs ${EXECUTABLE_OUTPUT_PATH}/Macrocirculation_Test_LinearCharacteristicBCs)

add_executable(Macrocirculation_Test_NonlinearCharacteristicBCs test_nonlinear_characteristic_bcs.cpp)
target_link_libraries(Macrocirculation_Test_NonlinearCharacteristicBCs PRIVATE LibMacrocirculation)
target_link_libraries(Macrocirculation_Test_NonlinearCharacteristicBCs PRIVATE Macrocirculation_LibMesh_Test_Runner)
add_test(Macrocirculation_Test_NonlinearCharacteristicBCs ${EXECUTABLE_OUTPUT_PATH}/Macrocirculation_Test_NonlinearCharacteristicBCs)

add_executable(Macrocirculation_Test_NonlinearSolverBitwise test_nonlinear_solver_bitwise.cpp)
target_link_libraries(Macrocirculation_Test_NonlinearSolverBitwise PRIVATE Macrocirculation_TestUtil)
target_link_libraries(Macrocirculation_Test_NonlinearSolverBitwise PRIVATE Macrocirculation_LibMesh_Test_Runner)
add_test(Macrocirculation_Test_NonlinearSolverBitwise ${EXECUTABLE_OUTPUT_PATH}/Macrocirculation_Test_NonlinearSolverBitwise)
add_test(NAME Macrocirculation_Test_NonlinearSolverBitwise_MPI3 COMMAND mpirun -np 3 ${EXECUTABLE_OUTPUT_PATH}/Macrocirculation_Test_NonlinearSolverBitwise)

add_executable(Macrocirculation_Test_LinearSolverBitwise test_linear_solver_bitwise.cpp)
target_link_libraries(Macrocirculation_Test_LinearSolverBitwise PRIVATE Macrocirculation_TestUtil)
target_link_libraries(Macrocirculation_Test_LinearSolverBitwise PRIVATE Macrocirculation_LibMesh_Test_Runner)
add_test(Macrocirculation_Test_LinearSolverBitwise ${EXECUTABLE_OUTPUT_PATH}/Macrocirculation_Test_LinearSolverBitwise)
add_test(NAME Macrocirculation_Test_LinearSolverBitwise_MPI3 COMMAND mpirun -np 3 ${EXECUTABLE_OUTPUT_PATH}/Macrocirculation_Test_LinearSolverBitwise)

add_executable(Macrocirculation_Test_VesselFormulas test_vessel_formulas.cpp)
target_link_libraries(Macrocirculation_Test_VesselFormulas PRIVATE Macrocirculation_Test_Runner)
target_link_libraries(Macrocirculation_Test_VesselFormulas PRIVATE LibMacrocirculation)

add_executable(Macrocirculation_Test_UpwindingFormulasLinearizedFlow test_upwinding_formulas_linearized_flow.cpp)
target_link_libraries(Macrocirculation_Test_UpwindingFormulasLinearizedFlow PRIVATE Macrocirculation_Test_Runner)
target_link_libraries(Macrocirculation_Test_UpwindingFormulasLinearizedFlow PRIVATE LibMacrocirculation)
